--- a/Cart/cart.css
+++ b/Cart/cart.css
@@ -1,4 +1,82 @@
-/* #cart_container > button{
+  
+#product-container {
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 20px;
+    width: 60%;
+    margin: auto;
+}
+#main{
+    border: solid;
+    border: 1px solid red;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 10px;
+    width: 80%;
+    height: 70%;
+}
+#card{
+    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 10px;
+    display: flex;
+    /* height: 70%; */
+}
+#card:hover {
+    border: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+img {
+    height: 70%;
+  }
+button{
+    align-items: center;
+  /* background-color: #06f;
+  border: 2px solid #06f; */
+  
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  fill: #000;
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: -0.8px;
+  line-height: 24px;
+  min-width: 140px;
+  outline: 0;
+  padding: 0 17px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  justify-content: space-between;
+  } 
+  button:focus {
+    color: #171e29;
+  }
+  
+  button:hover {
+    background-color: #E3F2FD;
+    border-color: #3385ff;
+    fill: #06f;
+  }
+  
+  button:active {
+    background-color: #3385ff;
+    border-color: #3385ff;
+    fill: #06f;
+  }
+  button > div{
+    display: inline-flex;
+    margin: 10px;
+  }
 
-    <i class="fa-solid fa-trash"></i>
-} */
+
+  
