--- a/Cart/cart.css
+++ b/Cart/cart.css
@@ -1,82 +1,199 @@
-  
-#product-container {
-    border: 1px solid black;
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    gap: 20px;
-    width: 60%;
-    margin: auto;
+#offer {
+  width: 80%;
+  margin: auto;
+  border: 1px solid lightgrey;
+  border-radius: 8px;
+  color: white;
+  font-size: 20px;
+  /* margin-top: 20px; */
+  padding: 10px;
+  background: #cc2b5e;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #753a88, #cc2b5e);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #753a88, #cc2b5e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+h2 {
+  border: 1px solid lightgray;
+  text-align: center;
+  width: 80%;
+  margin: auto;
+  padding: 10px;
+  border-radius: 8px;
 }
 #main{
-    border: solid;
-    border: 1px solid red;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    padding: 10px;
-    width: 80%;
-    height: 70%;
+  border: 2px solid greenyellow;
 }
-#card{
-    border: 1px solid black;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    padding: 10px;
-    display: flex;
-    /* height: 70%; */
+
+#card {
+  border: 2px solid lightgrey;
+  border-radius: 8px;
+  padding: 10px;
 }
-#card:hover {
-    border: none;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+#product-container {
+  display: grid;
+  border: 1px solid lightgray;
+  padding: 25px;
+  grid-template-columns: repeat(3, 1fr);
+  width: 80%;
+  margin: auto;
+  gap: 10px;
+  text-align: center;
+  border-radius: 8px;
+}img {
+  width: 60%;
 }
-img {
-    height: 70%;
-  }
-button{
-    align-items: center;
-  /* background-color: #06f;
-  border: 2px solid #06f; */
-  
+#btn {
+  align-items: center;
+  background-color: darkred;
+  border: 2px solid darkred;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-flex;
   fill: #000;
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  height: 48px;
+  font-size: 14px;
+  font-weight: 500;
+  height: 35px;
   justify-content: center;
-  letter-spacing: -0.8px;
   line-height: 24px;
-  min-width: 140px;
-  outline: 0;
-  padding: 0 17px;
-  text-align: center;
-  text-decoration: none;
+  min-width: 100px;
   transition: all 0.3s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  justify-content: space-between;
-  } 
-  button:focus {
-    color: #171e29;
-  }
-  
-  button:hover {
-    background-color: #E3F2FD;
-    border-color: #3385ff;
-    fill: #06f;
-  }
-  
-  button:active {
-    background-color: #3385ff;
-    border-color: #3385ff;
-    fill: #06f;
-  }
-  button > div{
-    display: inline-flex;
-    margin: 10px;
-  }
+  border-radius: 5px;
+  margin: 10px;
+}
+
+#btn:focus {
+  color: #171e29;
+}
+
+#btn:hover {
+  background-color: red;
+  border-color: red;
+  fill: red;
+}
+
+#btn:active {
+  background-color: red;
+  border-color: red;
+  fill: red;
+}
 
 
+#btn1 {
+  align-items: center;
+  background-color: green;
+  border: 2px solid green;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  fill: #000;
+  font-size: 14px;
+  font-weight: 500;
+  height: 35px;
+  justify-content: center;
+  line-height: 24px;
+  min-width: 100px;
+  transition: all 0.3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  border-radius: 5px;
+}
+#btn1:focus {
+  color: #171e29;
+}
+
+#btn1:hover {
+  background-color: yellowgreen;
+  border-color: yellowgreen;
+  fill: yellowgreen;
+}
+
+#btn1:active {
+  background-color: yellowgreen;
+  border-color: yellowgreen;
+  fill: yellowgreen;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+ 
+  #product-container {
+    display: grid;
+    border: 1px solid #ffd91c;
+    padding: 25px;
+    grid-template-columns: repeat(1, 1fr);
+    width: 70%;
+    margin: auto;
+    gap: 50px;
+    text-align: center;
+  }
+  #funcationality {
+    /* border: 1px solid gray; */
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    justify-content: space-around;
+    text-align: center;
+    margin: auto;
+  }
+  input {
+    text-align: center;
+    padding: 5px;
+    border: 1px solid #ffd91c;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
   
+  #product-container {
+    display: grid;
+    border: 1px solid #ffd91c;
+    padding: 25px;
+    grid-template-columns: repeat(2, 1fr);
+    width: 80%;
+    margin: auto;
+    gap: 50px;
+    text-align: center;
+  }
+  input {
+    text-align: center;
+    padding: 5px;
+    border: 1px solid #ffd91c;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  
+  #product-container {
+    display: grid;
+    border: 1px solid #ffd91c;
+    padding: 25px;
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
+    margin: auto;
+    gap: 50px;
+    text-align: center;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  
+  #product-container {
+    display: grid;
+    border: 1px solid #ffd91c;
+    padding: 25px;
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
+    margin: auto;
+    gap: 50px;
+    text-align: center;
+  }
+}
