--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@
     color: #263238;
 }
 #header1{
-    width: 100%;
+    
     display: flex;
     justify-content: center;
     background-color: #FDD835;
@@ -54,7 +54,6 @@
 }
 
 .navbar1{
-  width: 100%;
   margin-top: 3px;
   display: flex;
   align-items: center;
@@ -168,7 +167,8 @@
         font-size: 14px
     }
 }
-.openMenu{
+.openMenu,
+.openMenu1{
   font-size: 2rem;  
   margin: 20px;
   display: none;
@@ -236,7 +236,39 @@
         transition: top 1s ease;
         display: none;
     }
-
+    .navbar1{
+        background: linear-gradient(to right, #f7ff00, #db36a4);
+        color: #FDD835;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 10;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+       
+        transition: top 1s ease;
+        display: none;
+    }
+    .openMenu1{
+        width: 100%;
+        display: flex;
+        margin: auto;
+        margin-right: 10px;
+    }
+    .openMenu1 a{
+        height: 100%;
+        margin-left: 10px;
+        color: #424242;
+         font-family: Arial, Helvetica, sans-serif;
+        font-size: 15px;
+        font-weight: 550;
+    }
+    .openMenu1 a:hover{
+        background-color: white;
+    }
 }
 h2{
     margin-top: 15px;
